                Print physical characteristics for all DDR3 module types
                Don't print raw SSTE32882 register values
                Add support for Load Reduced DIMM (LRDIMM) DDR3 modules
                Fully decode the DDR3 SDRAM Device Type field
                Encode "degrees" to HTML degree symbol
                Generate XHTML 1.1 compliant markup
  i2cdetect: Do a best effort detection if functionality is missing
             Clarify the SMBus commands used for probing by default
  i2c-dev.h: Minimize differences with kernel flavor
             Move SMBus helper functions to include/i2c/smbus.h
  i2c-stub-from-dump: Be more tolerant on input dump format
  library: New libi2c library
           Properly propagate real error codes on read errors
           Use I2C_SMBUS_BLOCK_MAX instead of hard-coding 32
  lib/smbus.c: Add missing include which was causing a build error
  py-smbus: Fix module level docs

3.1.0 (2011-12-04)
  decode-dimms: Decode module configuration type of DDR SDRAM
                Decode refresh rate of DDR SDRAM
                Add support for the at24 kernel driver
  i2c-dev.h: Make value arrays const for block write functions
  i2cset: Add support for SMBus and I2C block writes
          Removed obsolete method to specify value mask
          More stringent parameter validation

3.0.3 (2010-12-12)
  Makefile: Let the environment set CC and CFLAGS
            Integrate py-smbus into the build system
  README: Point users to the linux-i2c mailing list
  decode-dimms: Handle CRC of FB-DIMM and DDR3 SDRAM memory modules
                Add support for DDR3 SDRAM
                Fix decoding of SDR SDRAM bytes 12-14
                Add side-by-side formatting option
                Add merged cells formatting option
                Try harder to decode the manufacturing date
                Handle read errors on sysfs
                Decode voltage interface level of DDR SDRAM
  decode-xeon: Delete